--- a/locpin/css/main.css
+++ b/locpin/css/main.css
@@ -23,7 +23,6 @@ h2{
     color: #9898AF;
     line-height: 40px;
     font-weight: 300;
-    text-align: left;
 }
 
 
